--- a/contacto.html
+++ b/contacto.html
@@ -51,7 +51,7 @@
 <main>
 
   <div class="instrucciones-texto">
-    <h2>Contacto</h2>
+    <h2> Efecto AZ</h2>
     <div class="social-buttons">
       <a href="https://www.instagram.com/efecto_az/" target="_blank" class="social-btn instagram">
         <i class="fab fa-instagram"></i> Instagram
