--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   </p>
 
   <a href="#" class="back-to-top">⬆ Volver</a>
-  <a href="contacto.html">Contacto</a>
+  <!--<a href="contacto.html">Contacto</a>-->
   <p>© 2025 Efecto AZ.</p>
 
 </footer>
