--- a/index.html
+++ b/index.html
@@ -68,18 +68,32 @@
         <p>$25.000</p>
         <button class="btn-carrito">Agregar al carrito</button>
       </div>
+
+      <div class="card">
+        <img src="img/abrojo1.jpg" alt="Animal print check! 🤎 N 35 " onclick="abrirModal(this)">
+        <h3>Ojotas con abrojo - N 37/38 </h3>
+        <p>$15.000</p>
+        <button class="btn-carrito">Agregar al carrito</button>
+      </div>
      
       <div class="card">
         <img src="img/ojotasnegras.jpg" alt="Ojotas Clásicas" onclick="abrirModal(this)">
         <h3>Ojotas clásicas negras, súper cómodas! 🌊🏝️☀️🖤 N 35/36 </h3>
-        <p>$25.000</p>
+        <p>$15.000</p>
         <button class="btn-carrito">Agregar al carrito</button>
       </div>
 
       <div class="card">
         <img src="img/ojotasblancas.jpg" alt="" onclick="abrirModal(this)">
         <h3>check!  </h3>
-        <p>$25.000</p>
+        <p>$15.000</p>
+        <button class="btn-carrito">Agregar al carrito</button>
+      </div>
+
+      <div class="card">
+        <img src="img/zapas.jpg" alt="Animal print check! 🤎 N 35 " onclick="abrirModal(this)">
+        <h3>Botinetas galácticas - N 36 </h3>
+        <p>$28.000</p>
         <button class="btn-carrito">Agregar al carrito</button>
       </div>
 
