--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
       <div class="card">
         <img src="img/ojotasblancas.jpg" alt="" onclick="abrirModal(this)">
-        <h3>check!  </h3>
+        <h3>Ojotas clásicas blans, súper cómodas! 🌊🏝️☀️ N 35/36 </h3>
         <p>$15.000</p>
         <button class="btn-carrito">Agregar al carrito</button>
       </div>
