--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Catálogo Mayorista</title>
+  <title>Catálogo AZ</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/estilos.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -64,35 +64,35 @@
     
       <div class="card">
         <img src="img/animalPrint.jpg" alt="Animal print check! 🤎 N 35 " onclick="abrirModal(this)">
-        <h3>Animal print check! 🤎 N 35 </h3>
+        <h3>Animal print check! 🤎</h3>
         <p>$25.000</p>
         <button class="btn-carrito">Agregar al carrito</button>
       </div>
 
       <div class="card">
         <img src="img/abrojo1.jpg" alt="Animal print check! 🤎 N 35 " onclick="abrirModal(this)">
-        <h3>Ojotas con abrojo - N 37/38 </h3>
+        <h3>Ojotas con abrojo</h3>
         <p>$15.000</p>
         <button class="btn-carrito">Agregar al carrito</button>
       </div>
      
       <div class="card">
         <img src="img/ojotasnegras.jpg" alt="Ojotas Clásicas" onclick="abrirModal(this)">
-        <h3>Ojotas clásicas negras, súper cómodas! 🌊🏝️☀️🖤 N 35/36 </h3>
+        <h3>Ojotas clásicas negras 🌊🏝️☀️🖤</h3>
         <p>$15.000</p>
         <button class="btn-carrito">Agregar al carrito</button>
       </div>
 
       <div class="card">
         <img src="img/ojotasblancas.jpg" alt="" onclick="abrirModal(this)">
-        <h3>Ojotas clásicas blans, súper cómodas! 🌊🏝️☀️ N 35/36 </h3>
+        <h3>Ojotas clásicas blancas 🌊🏝️☀️</h3>
         <p>$15.000</p>
         <button class="btn-carrito">Agregar al carrito</button>
       </div>
 
       <div class="card">
-        <img src="img/zapas.jpg" alt="Animal print check! 🤎 N 35 " onclick="abrirModal(this)">
-        <h3>Botinetas galácticas - N 36 </h3>
+        <img src="img/boti1.jpg" alt="Animal print" onclick="abrirModal(this)">
+        <h3>Botinetas galácticas</h3>
         <p>$28.000</p>
         <button class="btn-carrito">Agregar al carrito</button>
       </div>
