--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
       <div class="card">
         <img src="img/abrojo1.jpg" alt="Animal print check! 🤎 N 35 " onclick="abrirModal(this)">
-        <h3>Ojotas con abrojo</h3>
+        <h3>Ojotas con abrojo - Blancas</h3>
         <p>$15.000</p>
         <button class="btn-carrito">Agregar al carrito</button>
       </div>
