--- a/contacto.html
+++ b/contacto.html
@@ -50,6 +50,36 @@
 
 <main>
 
+ <section class="facebook-embed">
+  <p class="fb-sub">
+    💳 Abonás por Mercado Pago · 🚚 Envíos con seguimiento
+  </p>
+
+  <div class="fb-video">
+    <!-- Embed de Instagram -->
+    <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/DTihQp_DocB/" data-instgrm-version="14" style="background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px rgba(0,0,0,0.5),0 1px 10px rgba(0,0,0,0.15); margin: 0 auto; max-width:540px; min-width:326px; padding:0; width:100%;">
+    </blockquote>
+  </div>
+
+  <p class="fb-cta">
+    📦 Envíos a todo el país 
+  </p>
+</section>
+
+<!-- Script de Instagram para que cargue el embed -->
+<script async src="https://www.instagram.com/embed.js"></script>
+
+
+  <!-- Forzar recálculo del embed -->
+  <script>
+    window.addEventListener('load', function () {
+      if (window.FB) {
+        FB.XFBML.parse();
+      }
+    });
+  </script>
+
+  </aside>
   <div class="instrucciones-texto">
     <h2> Efecto AZ</h2>
     <div class="social-buttons">
@@ -69,39 +99,6 @@
     </div>
       
   </div>
-
-  <section class="facebook-embed">
-  <h2>🔥</h2>
-  <p class="fb-sub">
-    
-  </p>
-
-  <div class="fb-video">
-    <iframe
-      src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fagustina.zudaire.7%2Fposts%2Fpfbid02KEdtBxCWo4S4nmsE4xvJroLMBBAcTeR49oV1U2zXDg6QfaDQH48erxAsSU2hwFudl&show_text=true&width=500" width="500" height="250" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-      loading="lazy"
-      allowfullscreen="true"
-      allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
-    </iframe>
-  </div>
-
-  <p class="fb-cta">
-    📦 Envíos a todo el país · 
-  </p>
-
-  </section>
-
-  <!-- Forzar recálculo del embed -->
-  <script>
-    window.addEventListener('load', function () {
-      if (window.FB) {
-        FB.XFBML.parse();
-      }
-    });
-  </script>
-
-  </aside>
-
 </main>
 
 <footer>
