--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <header>
   <div class="titulo-contenedor">
-    <h1 class="titulo-animado">
-   Envíos a todo el país <span class="emoji"> 🇦🇷 </span>
-    </h1>
+    <p class="titulo-animado">
+  Envíos a todo el país <span class="emoji">🇦🇷</span> 
+  </p>
     <nav>
       <a href="contacto.html">Contacto</a>
       <input type="text" id="search" placeholder="🔍 Buscá un producto..." style="margin-left:0.1rem; padding:0.3rem; border-radius:5px; border:none;">
