--- a/contacto.html
+++ b/contacto.html
@@ -18,9 +18,9 @@
 
 <header>
   <div class="titulo-contenedor">
-    <h1 class="titulo-animado">
-    Envíos a todo el país <span class="emoji">📦</span> <span class="emoji">🇦🇷</span>
-    </h1>
+    <p class="titulo-animado">
+  Envíos a todo el país <span class="emoji">🇦🇷</span> 
+  </p>
 
     <nav>
       <a href="index.html">Catálogo</a>
