--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
   <section class="destacados">
        
     <div class="portfolio">
+
+      <div class="card" data-talles="36">
+        <img src="img/bs1.jpg" alt="Animal print" onclick="abrirModal(this)">
+        <h3>Botas</h3>
+        <p>$78.000</p>
+        <button class="btn-carrito">Agregar al carrito</button>
+      </div>
     
       <div class="card" data-talles="35,36">
         <img src="img/animalPrint.jpg" alt="Animal print check! 🤎 N 35 " onclick="abrirModal(this)">
